# thuctap

./: README.md  build_KG.ipynb  elasticSearch.ipynb
agents_research/: study_agents.py  test_agents.ipynb
agents_research/ver11/: agents_ne.py  chatbot_agents_backend.py  chatbot_agents_frontend.py  langfuse_ne.py  pdf_manager.py  requirements.txt
agents_research/ver12/: agents_ne.py  chatbot_agents_backend.py  chatbot_agents_frontend.py  config.py  index_data_pdf.py  langfuse_ne.py  pdf_manager.py
agents_research/ver2/: requirements.txt  searching.py  test_agents.ipynb
agents_research/ver3/: test_agents.ipynb
agents_research/ver4/: chatbot_agents.py  search_elasticsearch.py
agents_research/ver5/: agents_ne.py  chatbot_agents_backend.py
agents_research/ver6/: agents_ne.py  chatbot_agents_backend.py  chatbot_agents_frontend.py
agents_research/ver7/: agents_ne.py  chatbot_agents_backend.py  chatbot_agents_frontend.py  config.py  pdf_manager.py  search_elasticsearch.py
build_KG/: KG_BUILDed.txt  KG_BUILDed_rmDuplicate.txt  tma_data.json
data/: apod_raw.json  tma_data.json
mcp_agent/ve/: client.py
mcp_agent/ver1/: client.py  client_sse.py  pyproject.toml  server.py  server_sse.py
ver1/: index_data.py  main.py
ver2/: config.py  crawdata.ipynb  index_data.py  main.py
ver3/: index_data.py  main.py  utils.py
ver4/: index_data_embedding.py  index_data_hybrid.py  main.py
ver5/: chatbot_agents_frontend.py  config.py  requirements.txt  search_duckduck.py
ver9/: chatbot_agents_backend.py  index_data_pdf.py  langfuse_ne.py  search_duckduck.py
(+36 files in other folders)
