[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "autogen-agentchat>=0.5.2",
    "autogen-ext[azure,mcp]>=0.5.2",
    "beautifulsoup4>=4.13.3",
    "mcp[cli]>=1.6.0",
]
